# lspl

./: .gitmodules  CMakeLists.txt
cmake/: aot.cmake  boost.cmake  xmorphy.cmake
contrib/: CMakeLists.txt
contrib/aot-cmake/: CMakeLists.txt
contrib/aot/Source/common/: common_exe_mak
contrib/boost-cmake/: CMakeLists.txt
core/: CMakeLists.txt
core/src/main/lspl/graphan/: AotGraphan.cpp  Graphan.cpp  XmorphyGraphan.cpp  XmorphyGraphan.h
core/src/main/lspl/morphology/: AotMorphology.cpp  AotMorphology.h  Morphology.cpp  Morphology.h  XmorphyMorphology.cpp  XmorphyMorphology.h
core/src/main/lspl/patterns/: PatternBuilder.cpp
core/src/main/lspl/text/attributes/: AttributeKey.cpp  AttributeValue.cpp  SpeechPart.cpp
core/src/main/lspl/text/markup/: Word.cpp  Word.h
core/src/main/lspl/text/readers/: PlainTextReader.cpp
core/src/main/lspl/transforms/: PatternTransform.cpp  TextTransform.cpp
core/src/main/lspl/utils/: RusConsts.h
core/src/test/: LsplTests.cpp  pattern_to_text_example.cpp
core/src/test/assertions/: MatchingAssertions.cpp  MatchingAssertions.h
core/src/test/tests/: MatchingTest.cpp  PatternsTest.cpp  RightPartTest.cpp  Tests.h  TextReadersTest.cpp
tools/: CMakeLists.txt
